python-apt (0.6.15) unstable; urgency=low

  * fix a invalid return from cache.commit(), fail if a download failed
  * apt.Package.candidateOrigin returns a class now
  * added pkgAcquire, pkgPackageManager and a example (acquire.py)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 17 Nov 2005 13:00:14 +0100

python-apt (0.6.14) unstable; urgency=low

  * doc/examples/build-deps.py:
    - fixed/improved (thanks to Martin Michlmayr, closes: #321507)
  * apt_pkg.Cache.Update() does no longer reopen the cache
    (this is the job of the caller now)
  * python/srcrecords.cc:
    - support for "srcrecords.Files" added
    - always run "Restart" before performing a Lookup 
  * export locking via: GetLock(),PkgSystem{Lock,UnLock} 
  * apt/cache.py:
    - added  __iter__ to make "for pkg in apt.Cache:" stuff possible

 -- Michael Vogt <mvo@debian.org>  Wed,  9 Nov 2005 04:52:08 +0100

python-apt (0.6.13) unstable; urgency=low

  * support for depcache added
  * support for the PkgProblemResolver added
  * support for PkgSrcRecord.BuildDepends added
  * support for cdrom handling (add, ident) added
  * support for progress reporting from operations added
    (e.g. OpProgress, FetchProgress, InstallProgress, CdromProgress)
  * added tests/ directory with various tests for the code
  * native apt/ python directory added that contains
    a more pythonic interface to apt_pkg
  * made the apt/ python code PEP08 conform
  * python exceptions return the apt error message now 
    (thanks to Chris Halls for the patch)
  
 -- Michael Vogt <mvo@debian.org>  Fri,  5 Aug 2005 10:30:31 +0200

python-apt (0.6.12.2) unstable; urgency=low

   * rebuild against the latest apt (c++ transition)

 -- Michael Vogt <mvo@debian.org>  Mon, 1 Aug 2005 11:06:03 +0200

python-apt (0.6.12.1) unstable; urgency=low

   * rebuild against the latest apt

 -- Michael Vogt <mvo@debian.org>  Tue, 28 Jun 2005 18:29:57 +0200 

python-apt (0.6.12ubuntu1) breezy; urgency=low
