@@ -3,6 +3,9 @@ python-apt (0.6.15) unstable; urgency=low
   * fix a invalid return from cache.commit(), fail if a download failed
   * apt.Package.candidateOrigin returns a class now
   * added pkgAcquire, pkgPackageManager and a example (acquire.py)
+  * tightend build-dependencies for new apt and the c++ transition
+  * rewrote cache.Commit() and make it raise proper Exception if stuff
+    goes wrong
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 17 Nov 2005 13:00:14 +0100
 
